# bot

./: .gitignore  pyproject.toml  requirements.txt
.idx/: dev.nix
bot/: dev.py  init.py  main.py
cli/: __main__.py  main.py
notebooks/: memory.ipynb  rag-1.ipynb  rag_1.ipynb  rag_2.ipynb
src/: init.py  main.py
