[tool.poetry]
name = "cli"
version = "0.1.0"
description = ""
authors = ["rijaluddina <rijaluddin.alazmi@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
python-dotenv = "^1.0.1"
langgraph = "^0.2.53"
langchain-groq = "^0.2.1"
langchain-core = "^0.3.21"
connect-markdown-renderer = "^3.0.0"

[tool.poetry.scripts]
project = "cli.__main__:main"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
